# raginit

./: .env  .env.example  .gitignore  AZURE_SETUP.md  azure_test.py  create_database.py  main.py  pyproject.toml  query_data.py  test_azure_connection.py  test_rag.py
